# cosmic.rs

./: Cargo.toml  LICENSE  README.md
migrations/: 20240129230139_init.down.sql  20240129230139_init.up.sql
src/: main.rs
src/domain/: model.rs  repository.rs
