[package]
name = "cosmic"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.31"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
dotenvy = "0.15.7"
anyhow = "1.0.79"
async-trait = "0.1.77"

[dev-dependencies]
mockall = "0.12.1"
